[gd_scene load_steps=3 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]
[ext_resource path="res://Avatar.tscn" type="PackedScene" id=2]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.4
anchor_top = 0.25
anchor_right = 0.6
anchor_bottom = 0.33

[node name="Control" type="Control" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = -1.0
anchor_right = 0.5
offset_left = -1.52588e-05
offset_top = 10.8
offset_right = -1.52588e-05
offset_bottom = 10.8

[node name="Avatar" parent="CanvasLayer/Panel/Control" instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
offset_right = 163.0
offset_bottom = 14.0
size_flags_horizontal = 3
text = "Choose your avatar!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
offset_top = 18.0
offset_right = 163.0
offset_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_Left" type="Button" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
offset_right = 51.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "<"

[node name="Button_Ok" type="Button" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
offset_left = 55.0
offset_right = 107.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "OK"

[node name="Button_Right" type="Button" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
offset_left = 111.0
offset_right = 163.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = ">"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.6

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer"]
offset_right = 614.0
offset_bottom = 52.0
columns = 2

[node name="Label_Username" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
offset_top = 5.0
offset_right = 74.0
offset_bottom = 19.0
text = "Username: "

[node name="LineEdit_Username" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
offset_left = 78.0
offset_right = 614.0
offset_bottom = 24.0
size_flags_horizontal = 3

[node name="Label_Password" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
offset_top = 33.0
offset_right = 74.0
offset_bottom = 47.0
text = "Password: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_Password" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
offset_left = 78.0
offset_top = 28.0
offset_right = 614.0
offset_bottom = 52.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/VBoxContainer"]
offset_top = 56.0
offset_right = 614.0
offset_bottom = 76.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/CenterContainer"]
offset_left = 250.0
offset_right = 364.0
offset_bottom = 20.0

[node name="Button_Login" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer"]
offset_right = 46.0
offset_bottom = 20.0
text = "Login"

[node name="Button_Register" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer"]
offset_left = 50.0
offset_right = 114.0
offset_bottom = 20.0
text = "Register"
